Fri May 27 09:14:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/LoadBalancer/LoadMonitor.cpp:
        * orbsvcs/examples/ImR/Advanced/TestClient.cpp:
        * orbsvcs/tests/Bug_3486_Regression/server.cpp:
        * orbsvcs/tests/IOR_MCast/client.cpp:
        * orbsvcs/tests/Notify/Bug_2926_Regression/server.cpp:
        * orbsvcs/tests/Notify/Bug_3646b_Regression/server.cpp:
        * orbsvcs/tests/Notify/Bug_3646c_Regression/server.cpp:
        * orbsvcs/tests/Notify/Bug_3646d_Regression/server.cpp:
        * orbsvcs/tests/Notify/Bug_3663_Regression/server.cpp:
        * orbsvcs/tests/Notify/Bug_3688b_Regression/server.cpp:
        * orbsvcs/tests/Security/Bug_1107_Regression/client.cpp:
          Resolved gcc 4.6 warnings: variable was set but not used.

Thu May 26 15:25:36 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/fe/fe_utils.cpp:
          tmp variable wasn't necessary. Removed it.

Thu May 26 14:13:05 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_ci.cpp:
        * TAO_IDL/fe/fe_utils.cpp:
        * tao/Strategies/COIOP_Acceptor.cpp:
          Resolved gcc 4.6 warnings: variable was set but not used.

Thu May 26 13:48:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Sequence_Unit_Tests/Bounded_Simple_Types.cpp:
        * tests/Sequence_Unit_Tests/Bounded_String.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_Octet.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_Simple_Types.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_String.cpp:
          Catch uncaught exceptions in main.

Thu May 26 13:11:19 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tao/Generic_Sequence_T.h:
          Added file name to doxygen documentation

        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
          Resolved Coverity warning: catching a uncaught BAD_PARAM exception.

Fri May 20 22:07:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>
