@@ -1,3 +1,15 @@
+Fri May 27 10:09:25 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * orbsvcs/examples/ImR/Advanced/TestClient.cpp:
+        * orbsvcs/tests/IOR_MCast/client.cpp:
+        * orbsvcs/tests/Security/Bug_1107_Regression/client.cpp:
+          Statisfy Coverity and the GNU 4.6 gcc compiler. Using a 
+          returned value either by using ACE_UNUSED_ARG or to print
+          in a log message.
+
+        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
+          Fuzz.
+
 Fri May 27 09:14:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>
 
         * orbsvcs/LoadBalancer/LoadMonitor.cpp:
